Update gallery to use local images from /img directory - 11 total designs

--- a/index.html
+++ b/index.html
@@ -583,34 +583,59 @@
                 const currentImageIndex = ref(0);
                 const images = [
                     {
-                        title: "Lujo Contemporáneo",
-                        description: "Diseño moderno con acabados premium",
-                        src: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2070&auto=format&fit=crop"
+                        title: "Freedom Lifestyle Key - Concepto 1",
+                        description: "Identidad visual premium del programa",
+                        src: "img/1.png"
                     },
                     {
-                        title: "Vistas Globales",
-                        description: "Acceso a los destinos más exclusivos del mundo",
-                        src: "https://images.unsplash.com/photo-1502672260266-1c1ef2d93688?q=80&w=2070&auto=format&fit=crop"
+                        title: "Freedom Lifestyle Key - Concepto 2",
+                        description: "Diseño moderno con acabados exclusivos",
+                        src: "img/2.png"
                     },
                     {
-                        title: "Experiencia de Viaje",
-                        description: "Libertad para explorar sin límites",
-                        src: "https://images.unsplash.com/photo-1488646953014-85cb44e25828?q=80&w=2070&auto=format&fit=crop"
+                        title: "Freedom Lifestyle Key - Concepto 3",
+                        description: "Propuesta gráfica de alto impacto",
+                        src: "img/3.png"
                     },
                     {
-                        title: "Espacios Privados",
-                        description: "Privacidad y exclusividad garantizadas",
-                        src: "https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?q=80&w=2070&auto=format&fit=crop"
+                        title: "Freedom Lifestyle Key - Concepto 4",
+                        description: "Estética de lujo global",
+                        src: "img/4.png"
                     },
                     {
-                        title: "Comunidad Global",
-                        description: "Conexión con residentes de todo el mundo",
-                        src: "https://images.unsplash.com/photo-1519904981063-b0cf448d479e?q=80&w=2070&auto=format&fit=crop"
+                        title: "Freedom Lifestyle Key - Concepto 5",
+                        description: "Experiencia visual inmersiva",
+                        src: "img/5.png"
                     },
                     {
-                        title: "Estilo de Vida Premium",
-                        description: "Cada detalle cuidado para tu comodidad",
-                        src: "https://images.unsplash.com/photo-1566073771259-6a8506099945?q=80&w=2070&auto=format&fit=crop"
+                        title: "Freedom Lifestyle Key - Concepto 6",
+                        description: "Identidad moderna y sofisticada",
+                        src: "img/6.png"
+                    },
+                    {
+                        title: "Freedom Lifestyle Key - Concepto 7",
+                        description: "Propuesta visual diferenciadora",
+                        src: "img/7.png"
+                    },
+                    {
+                        title: "Freedom Lifestyle - Versión 1",
+                        description: "Marca global con presencia local",
+                        src: "img/flk1.png"
+                    },
+                    {
+                        title: "Freedom Lifestyle - Versión 2",
+                        description: "Identidad visual premium y accesible",
+                        src: "img/flk2.png"
+                    },
+                    {
+                        title: "Freedom Lifestyle - Concepto Premium 1",
+                        description: "Lujo y acceso global integrados",
+                        src: "img/flk3.jfif"
+                    },
+                    {
+                        title: "Freedom Lifestyle - Concepto Premium 2",
+                        description: "Visión futura del estilo de vida",
+                        src: "img/flk4.jfif"
                     }
                 ];
 
