--- a/index.html
+++ b/index.html
@@ -106,106 +106,92 @@
 
         /* ===== FONDOS DE SECCIONES PREMIUM ===== */
         
-        /* Fondo Hero con patrón sutil */
+        /* Fondo Hero con patrón sutil y elegante */
         header::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-image: 
-                radial-gradient(circle at 20% 50%, rgba(197, 160, 89, 0.03) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(139, 0, 139, 0.02) 0%, transparent 50%);
+            inset: 0;
+            background: 
+                radial-gradient(circle at 50% 30%, rgba(197, 160, 89, 0.08) 0%, transparent 60%),
+                linear-gradient(to bottom, rgba(5, 5, 5, 0) 0%, rgba(5, 5, 5, 0.8) 80%, #050505 100%);
             z-index: 5;
             pointer-events: none;
         }
 
-        /* Sección Concepto - Fondo con patrón diagonal elegante */
+        /* Sección Concepto - Patrón Geométrico Sofisticado */
         #concepto::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(135deg, #050505 0%, #0B0F19 50%, #050505 100%);
-            opacity: 0.6;
+            inset: 0;
+            background: linear-gradient(180deg, #050505 0%, #0e121b 50%, #050505 100%);
             z-index: 0;
         }
 
         #concepto::after {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            inset: 0;
+            /* Patrón de micro-puntos elegante */
             background-image: 
-                repeating-linear-gradient(45deg, transparent, transparent 100px, rgba(197, 160, 89, 0.02) 100px, rgba(197, 160, 89, 0.02) 200px),
-                radial-gradient(circle at 100% 0%, rgba(197, 160, 89, 0.05) 0%, transparent 50%);
+                radial-gradient(rgba(255, 255, 255, 0.03) 1px, transparent 1px),
+                radial-gradient(rgba(197, 160, 89, 0.02) 1px, transparent 1px);
+            background-size: 30px 30px, 20px 20px;
+            background-position: 0 0, 10px 10px;
+            mask-image: radial-gradient(circle at center, black 40%, transparent 100%);
+            -webkit-mask-image: radial-gradient(circle at center, black 40%, transparent 100%);
             z-index: 1;
             pointer-events: none;
         }
 
-        /* Sección Ventajas - Fondo con capas */
+        /* Sección Ventajas - Profundidad y Capas */
         #ventajas::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            inset: 0;
             background: 
-                radial-gradient(ellipse 800px 400px at center, rgba(197, 160, 89, 0.04) 0%, transparent 70%),
-                radial-gradient(ellipse 600px 600px at 30% 50%, rgba(139, 0, 139, 0.02) 0%, transparent 50%),
-                linear-gradient(to bottom, #0B0F19, #050505);
+                conic-gradient(from 0deg at 50% 50%, rgba(11, 15, 25, 1) 0%, rgba(15, 20, 35, 1) 50%, rgba(11, 15, 25, 1) 100%);
             z-index: 0;
         }
 
         #ventajas::after {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            inset: 0;
+            /* Patrón de líneas sutiles */
             background-image: 
-                linear-gradient(90deg, transparent 0%, rgba(197, 160, 89, 0.02) 50%, transparent 100%),
-                repeating-linear-gradient(0deg, transparent, transparent 80px, rgba(197, 160, 89, 0.01) 80px, rgba(197, 160, 89, 0.01) 160px);
+                linear-gradient(rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+            background-size: 100% 40px;
+            mask-image: linear-gradient(to bottom, transparent, black 20%, black 80%, transparent);
+            -webkit-mask-image: linear-gradient(to bottom, transparent, black 20%, black 80%, transparent);
             z-index: 1;
             pointer-events: none;
-            animation: subtleShift 20s ease-in-out infinite;
         }
 
-        /* Footer - Fondo premium con movimiento sutil */
+        /* Footer - Animación Fluida y Elegante */
         footer::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: 
-                linear-gradient(135deg, #020202 0%, #0a0e15 50%, #020202 100%),
-                radial-gradient(circle at top left, rgba(197, 160, 89, 0.08) 0%, transparent 60%),
-                radial-gradient(circle at bottom right, rgba(139, 0, 139, 0.03) 0%, transparent 60%);
+            inset: 0;
+            background: radial-gradient(ellipse at bottom, #1a1f2e 0%, #020202 70%);
             z-index: 0;
         }
 
         footer::after {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            inset: 0;
             background-image: 
-                repeating-linear-gradient(45deg, transparent, transparent 120px, rgba(197, 160, 89, 0.015) 120px, rgba(197, 160, 89, 0.015) 240px),
-                repeating-linear-gradient(-45deg, transparent, transparent 120px, rgba(139, 0, 139, 0.01) 120px, rgba(139, 0, 139, 0.01) 240px);
+                repeating-linear-gradient(90deg, transparent, transparent 50px, rgba(197, 160, 89, 0.01) 50px, rgba(197, 160, 89, 0.01) 51px);
+            mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);
+            -webkit-mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);
             z-index: 1;
             pointer-events: none;
-            animation: patternFloat 30s ease-in-out infinite;
+            animation: footerFlow 20s linear infinite;
+        }
+
+        @keyframes footerFlow {
+            0% { background-position: 0 0; }
+            100% { background-position: 50px 0; }
         }
 
         /* ===== ANIMACIONES FOOTER ===== */
@@ -263,26 +249,6 @@
             50% {
                 opacity: 1;
                 color: #C5A059;
-            }
-        }
-
-        @keyframes subtleShift {
-            0%, 100% {
-                transform: translateX(0) translateY(0);
-            }
-            50% {
-                transform: translateX(10px) translateY(-5px);
-            }
-        }
-
-        @keyframes patternFloat {
-            0%, 100% {
-                opacity: 0.3;
-                transform: translateY(0);
-            }
-            50% {
-                opacity: 0.6;
-                transform: translateY(-5px);
             }
         }
 
