chore: sincronizar cambios en index.html

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
         </header>
 
-        <section id="concepto" class="py-32 bg-brand-black relative overflow-hidden">
+        <section id="concepto" class="py-16 md:py-24 bg-brand-black relative overflow-hidden">
             <div class="absolute top-1/2 left-0 -translate-y-1/2 w-[600px] h-[600px] bg-brand-gold/5 rounded-full blur-[150px] pointer-events-none"></div>
 
             <div class="max-w-7xl mx-auto px-6 grid lg:grid-cols-12 gap-20 items-center relative z-10">
@@ -485,8 +485,8 @@
 
         <footer class="bg-[#020202] pt-24 pb-12 border-t border-white/5">
             <div class="max-w-4xl mx-auto px-6 text-center">
-                <h2 class="font-serif text-3xl md:text-4xl text-white mb-6 footer-title">Eleva el Estándar de tu Inventario</h2>
-                <p class="text-brand-muted mb-12 max-w-lg mx-auto font-light leading-relaxed footer-description">
+                <h2 class="font-serif text-4xl md:text-6xl text-white mb-8 footer-title tracking-tight">Eleva el Estándar de tu <span class="italic text-brand-gold">Inventario</span></h2>
+                <p class="text-gray-200 text-lg md:text-xl mb-12 max-w-2xl mx-auto font-light leading-relaxed footer-description">
                     Trabajamos exclusivamente con desarrollos seleccionados para mantener el prestigio del programa.
                 </p>
                 
