chore: sincronizar cambios en index.html

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
         </header>
 
         <section id="concepto" class="py-16 md:py-24 bg-brand-black relative overflow-hidden">
+        <section id="concepto" class="py-6 md:py-12 bg-brand-black relative overflow-hidden">
             <div class="absolute top-1/2 left-0 -translate-y-1/2 w-[600px] h-[600px] bg-brand-gold/5 rounded-full blur-[150px] pointer-events-none"></div>
 
             <div class="max-w-7xl mx-auto px-6 grid lg:grid-cols-12 gap-20 items-center relative z-10">
