--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <span v-if="mode === 'C'" class="ml-2">●</span>
                 </button>
                 <button v-if="backendReady" @click="setMode('D')" :class="mode === 'D' ? 'bg-brand-magenta text-white shadow-glow' : 'text-gray-500 hover:text-white'" class="px-3 py-2 rounded text-[10px] font-bold transition-all duration-300 flex justify-between items-center tracking-widest uppercase border border-brand-magenta/30">
-                    <span>D: Mi Narrativa</span>
+                    <span>D: Mi Narrativa 😎 </span>
                     <span v-if="mode === 'D'" class="ml-2">✏</span>
                 </button>
                 <button v-if="!backendReady" class="px-3 py-2 rounded text-[10px] font-bold text-gray-700 uppercase opacity-50 cursor-not-allowed" title="Backend no disponible">
