chore: add client-side error logger to POST to /client-log for diagnostics

--- a/index.html
+++ b/index.html
@@ -1575,5 +1575,32 @@
             }
         });
     </script>
+    <script>
+        (function clientLogger(){
+            function sendLog(payload){
+                try{
+                    if (navigator.sendBeacon){
+                        navigator.sendBeacon('/client-log', typeof payload === 'string' ? payload : JSON.stringify(payload));
+                        return;
+                    }
+                    fetch('/client-log', {method:'POST', body: JSON.stringify(payload), headers: {'Content-Type':'application/json'}, keepalive: true}).catch(()=>{});
+                }catch(e){}
+            }
+
+            const originalConsoleError = console.error.bind(console);
+            console.error = function(...args){
+                try{ sendLog({type:'console.error', args: args}); }catch(e){}
+                originalConsoleError(...args);
+            };
+
+            window.addEventListener('error', function(ev){
+                sendLog({type:'window.error', message: ev.message, filename: ev.filename, lineno: ev.lineno, colno: ev.colno});
+            });
+
+            window.addEventListener('unhandledrejection', function(ev){
+                sendLog({type:'unhandledrejection', reason: (ev.reason && ev.reason.stack) ? ev.reason.stack : String(ev.reason)});
+            });
+        })();
+    </script>
 </body>
 </html>
